--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "@elastic/eui": "^42.0.0",
     "@emotion/react": "^11.7.0",
     "@hookform/resolvers": "^2.8.5",
-    "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@reduxjs/toolkit": "^1.7.1",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "firebase": "^9.6.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
@@ -29,13 +28,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "json-db": "json-server ./src/db/db.json --port 3001",
+    "dev": "concurrently \"yarn run start\" \"yarn run json-db\" ",
+    "lint": "eslint -c .eslintrc --ext .jsx,.js,.tsx,.ts .",
+    "lint:fix": "yarn run lint -- --fix",
+    "pret": "prettier --config .prettierrc ./src/**/*.{tsx,ts} --write"
   },
   "browserslist": {
     "production": [
@@ -48,5 +46,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
+  },
+  "devDependencies": {
+    "concurrently": "^7.1.0",
+    "json-server": "^0.17.0",
+    "react-error-overlay": "6.0.9",
+    "sass": "^1.50.0"
   }
 }
